--- a/apps/shopify-theme/assets/main-product.css
+++ b/apps/shopify-theme/assets/main-product.css
@@ -1142,7 +1142,7 @@ a#size-guide2 {
   flex-direction: column;
   /* max-width: 540px;*/
   width: 100%;
-  margin-top: 26px;
+  margin: 26px 0;
 }
 
 .setsave-container {
