--- a/apps/shopify-theme/assets/main-size.css
+++ b/apps/shopify-theme/assets/main-size.css
@@ -1173,7 +1173,7 @@ a#size-guide2 {
     flex-direction: column;
     /* max-width: 540px;*/
     width: 100%;
-    margin-top: 26px;
+    margin: 26px 0;
 }
 
 .setsave-container {
